# cosmic-applet-arch

./: .gitignore  .rustfmt.toml  Cargo.toml  PKGBUILD  README.md  justfile  release-plz.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  release-plz.yml  rust.yml
arch-news-rs/: Cargo.toml
arch-updates-rs/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
arch-updates-rs/src/: get_updates.rs  lib.rs  source_repo.rs
aur/: .SRCINFO  PKGBUILD  generate_pkgbuild.sh
cosmic-applet-arch/: CHANGELOG.md  Cargo.toml
cosmic-applet-arch/config/: config.toml
cosmic-applet-arch/i18n/de/: cosmic_applet_arch.ftl
cosmic-applet-arch/i18n/en/: cosmic_applet_arch.ftl
cosmic-applet-arch/i18n/pt-BR/: cosmic_applet_arch.ftl
cosmic-applet-arch/i18n/sv/: cosmic_applet_arch.ftl
cosmic-applet-arch/pt-br/: cosmic_applet_arch.ftl
cosmic-applet-arch/src/: app.rs  main.rs  news.rs
cosmic-applet-arch/src/app/: async_file_lock.rs  subscription.rs  updates_state.rs  view.rs
cosmic-applet-arch/src/app/subscription/: core.rs  messages_to_app.rs  mock.rs  news_worker.rs  updates_worker.rs
cosmic-applet-arch/src/app/view/: settings.rs  view.rs  view_window.rs  widgets.rs
cosmic-applet-arch/src/core/: config.rs  localization.rs  mod.rs
cosmic-applet-arch/src/news/: error.rs  latest_update.rs  news_impl.rs
cosmic-applet-arch/test/: config.toml  mock_feed.rss  mock_news.ron  mock_updates.ron
res/: com.nick42d.CosmicAppletArch.desktop  com.nick42d.CosmicAppletArch.metainfo.xml
src/: app.rs
