[package]
name = "arch-updates-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Library to query arch linux packaging tools to see if updates are available."
homepage = "https://github.com/nick42d/cosmic-applet-arch"
repository = "https://github.com/nick42d/cosmic-applet-arch"
readme = "README.md"

[dependencies]
futures = "0.3.31"
raur = "7.0.0"
reqwest = "0.12.15"
srcinfo = "1.3.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["process"] }
version-compare = "0.2.0"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
