[package]
name = "arch-updates-rs"
version = "0.3.1"
edition = "2021"
license = "GPL-3.0"
description = "Library to query arch linux packaging tools to see if updates are available."
homepage = "https://github.com/nick42d/cosmic-applet-arch"
repository = "https://github.com/nick42d/cosmic-applet-arch"
readme = "README.md"

[dependencies]
futures = "0.3.31"
raur = "7.0.0"
reqwest = "0.12.20"
srcinfo = "2.0.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["process"] }
version-compare = "0.2.0"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
