[package]
name = "cosmic-applet-arch"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.80"

[dependencies]
chrono = "0.4.38"
futures = "0.3.31"
i18n-embed-fl = "0.9.1"
itertools = "0.13.0"
open = "5.1.3"
rust-embed = "8.3.0"
tokio = { version = "1.40.0", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# Commit pegged due to removal of autosize - expecting to see a solution upstream in cosmic time applet and then we can update.
rev = "9e064e7"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[dependencies.arch-updates-rs]
path = "../arch-updates-rs"

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
