[package]
name = "cosmic-applet-arch"
version = "1.0.0-beta.1"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.80"

[dependencies]
chrono = "0.4.38"
futures = "0.3.31"
i18n-embed-fl = "0.9.1"
itertools = "0.13.0"
open = "5.1.3"
rust-embed = "8.3.0"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"], optional = true }
ron = { version = "0.8.1", optional = true }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# To keep builds reproducible, libcosmic should be pegged to a rev.
# This should be updated periodically.
rev = "8d4afb9"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[dependencies.arch-updates-rs]
path = "../arch-updates-rs"

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[features]
# Feature to use mock version of API instead of real version - for testing.
mock-api = ["serde", "ron"]
