[package]
name = "cosmic-applet-arch"
version = "1.0.0-beta.9"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.85"

[dependencies]
chrono = "0.4.41"
futures = "0.3.31"
i18n-embed-fl = "0.9.4"
itertools = "0.14.0"
open = "5.3.2"
rust-embed = "8.7.0"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"], optional = true }
ron = { version = "0.8.1", optional = true }
rss = "2.0.12"
reqwest = "0.12.15"
tokio-stream = { version = "0.1.17", features = ["io-util"] }
directories = "6.0.0"
anyhow = "1.0.98"
rustix = {version = "1.0.5", features = ["fs"]}

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# To keep builds reproducible, libcosmic should be pegged to a rev.
# This should be updated periodically.
rev = "12317d8"
default-features = false
features = ["applet", "tokio", "wayland", "autosize"]

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.arch-updates-rs]
path = "../arch-updates-rs"

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[features]
# Feature to use mock version of API instead of real version - for testing.
mock-api = ["serde", "ron", "chrono/serde"]

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.19.1"
